src/test/deca/context/valid/declClass-withFieldsAndMethods.deca
class A {
    int x;
    protected int y;
    void mangerUnKebab(int nombreDeKebabs){
        int nbKebabManges = 10000000;
        while (nombreDeKebabs > 0 || nbKebabManges > 0){
            nombreDeKebabs = nombreDeKebabs - 1;
            nbKebabManges = nbKebabManges - 1;
        }
    }
    void rien () {}
}