src/test/deca/context/invalid/method-paramMemeNom.deca
class A{
	void a(int x, float x) {
	}
}
